# yandex_weather_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: check_makemigrations.yaml  check_pep8.yaml  main.yaml  pytest.yaml
backend/: .env.develop  Dockerfile  Dockerfile_Backend.dev  docker-compose.yaml  manage.py  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: import_json.py
backend/api/management/data/: import-russian-cities.json
backend/api/migrations/: 0001_initial.py
backend/core/: exceptions.py  models.py  utils.py  validators.py
backend/yandex_weather/: asgi.py  log_config.py  urls.py  wsgi.py
backend/yandex_weather/settings/: base.py
bot/: Dockerfile_Bot.dev  __main__.py  commands.py
bot/core/: config.py  exceptions.py  utils.py
bot/handlers/: __init__.py  users.py
bot/locales/ru/: errors.ftl  strings.ftl
bot/middlewares/: __init__.py  l10n.py
bot/services/: weather.py
infra/: docker-compose.yaml  requirements.dev  requirements.prod
infra/nginx/: app.conf
tests/: conftest.py  test_docker_compose.py  test_requirements.py  test_settings.py  test_users.py  test_workflow.py
